--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,63 @@
-body {
-    background-color: lightblue;
-  }
-  
+
   h1 {
     color: navy;
     margin-left: 20px;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: lightblue;
+  }
+  
+  section {
+    width: 200px;
+    border: 1px solid #2d2d2d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  div {
+    color: #fff;
+    background: #2d2d2d;
+    padding: 12px;
+    display: inline-block;
+  }
+
+  /* Style the header */
+  .header {
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+  }
+  
+  /* Container for flexboxes */
+  .row {
+    display: -webkit-flex;
+    display: flex;
+  }
+  
+  /* Create three equal columns that sits next to each other */
+  .column {
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Style the footer */
+  .footer {
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+  @media (max-width: 600px) {
+    .row {
+      -webkit-flex-direction: column;
+      flex-direction: column;
+    }
   }
