--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@
     margin-left: 20px;
   }
   
-  body {
+  /* body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightblue;
-  }
+  } */
   
   section {
     width: 200px;
@@ -17,12 +17,12 @@
     align-items: center;
   }
   
-  div {
+  /* div {
     color: #fff;
     background: #2d2d2d;
     padding: 12px;
     display: inline-block;
-  }
+  } */
 
   /* Style the header */
   .header {
